
# idf_component_register(

#     REQUIRES georgik__SDL georgik__lua
# )

# set(LOVE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/love)
# add_subdirectory(${LOVE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/love_build)
# # target_link_libraries(${COMPONENT_LIB} PUBLIC love)
# target_include_directories(${COMPONENT_LIB} INTERFACE
#     ${LOVE_DIR}/src
#     ${LOVE_DIR}/include
# )
# target_compile_definitions(${COMPONENT_LIB} INTERFACE
#     -fexceptions
# )

idf_component_register(
    SRCS
        "love/src/common/android.cpp"
        "love/src/common/android.h"
        "love/src/common/b64.cpp"
        "love/src/common/b64.h"
        "love/src/common/Color.h"
        "love/src/common/config.h"
        "love/src/common/Data.cpp"
        "love/src/common/Data.h"
        "love/src/common/delay.cpp"
        "love/src/common/delay.h"
        "love/src/common/deprecation.cpp"
        #"love/src/common/deprecation.h"
        "love/src/common/EnumMap.h"
        "love/src/common/Exception.cpp"
        "love/src/common/Exception.h"
        "love/src/common/floattypes.cpp"
        "love/src/common/floattypes.h"
        "love/src/common/int.h"
        "love/src/common/math.h"
        "love/src/common/Matrix.cpp"
        "love/src/common/Matrix.h"
        "love/src/common/memory.cpp"
        "love/src/common/memory.h"
        "love/src/common/Module.cpp"
        "love/src/common/Module.h"
        "love/src/common/Object.cpp"
        "love/src/common/Object.h"
        "love/src/common/Optional.h"
        "love/src/common/pixelformat.cpp"
        "love/src/common/pixelformat.h"
        "love/src/common/Range.h"
        "love/src/common/Reference.cpp"
        "love/src/common/Reference.h"
        "love/src/common/runtime.cpp"
        "love/src/common/runtime.h"
        "love/src/common/Stream.cpp"
        "love/src/common/Stream.h"
        "love/src/common/StringMap.cpp"
        "love/src/common/StringMap.h"
        "love/src/common/types.cpp"
        "love/src/common/types.h"
        "love/src/common/utf8.cpp"
        "love/src/common/utf8.h"
        "love/src/common/Variant.cpp"
        "love/src/common/Variant.h"
        "love/src/common/Vector.h"
        "love/src/common/version.h"

        # add_library(love_3p_glslang
        # "love/src/libraries/luasocket/luasocket.cpp"
        # "love/src/libraries/glslang/glslang/Include/intermediate.h"
        "love/src/libraries/glslang/glslang/build_info.h"
        "love/src/libraries/glslang/glslang/GenericCodeGen/CodeGen.cpp"
        "love/src/libraries/glslang/glslang/GenericCodeGen/Link.cpp"
        "love/src/libraries/glslang/glslang/Include/arrays.h"
        "love/src/libraries/glslang/glslang/Include/BaseTypes.h"
        "love/src/libraries/glslang/glslang/Include/Common.h"
        "love/src/libraries/glslang/glslang/Include/ConstantUnion.h"
        "love/src/libraries/glslang/glslang/Include/InfoSink.h"
        "love/src/libraries/glslang/glslang/Include/InitializeGlobals.h"
        "love/src/libraries/glslang/glslang/Include/intermediate.h"
        "love/src/libraries/glslang/glslang/Include/PoolAlloc.h"
        "love/src/libraries/glslang/glslang/Include/ResourceLimits.h"
        "love/src/libraries/glslang/glslang/Include/ShHandle.h"
        "love/src/libraries/glslang/glslang/Include/SpirvIntrinsics.h"
        "love/src/libraries/glslang/glslang/Include/Types.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/preprocessor/Pp.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/preprocessor/PpAtom.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/preprocessor/PpContext.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/preprocessor/PpContext.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/preprocessor/PpScanner.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/preprocessor/PpTokens.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/preprocessor/PpTokens.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/attribute.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/attribute.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/Constant.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/gl_types.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/glslang_tab.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/glslang_tab.cpp.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/InfoSink.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/Initialize.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/Initialize.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/Intermediate.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/intermOut.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/IntermTraverse.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/iomapper.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/iomapper.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/limits.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/linkValidate.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/LiveTraverser.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/localintermediate.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/parseConst.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/ParseContextBase.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/ParseHelper.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/ParseHelper.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/parseVersions.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/pch.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/PoolAlloc.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/propagateNoContraction.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/propagateNoContraction.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/reflection.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/reflection.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/RemoveTree.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/RemoveTree.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/Scan.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/Scan.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/ScanContext.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/ShaderLang.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/span.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/SpirvIntrinsics.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/SymbolTable.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/SymbolTable.h"
        "love/src/libraries/glslang/glslang/MachineIndependent/Versions.cpp"
        "love/src/libraries/glslang/glslang/MachineIndependent/Versions.h"
        "love/src/libraries/glslang/glslang/OSDependent/osinclude.h"
        "love/src/libraries/glslang/glslang/Public/ResourceLimits.h"
        "love/src/libraries/glslang/glslang/Public/ShaderLang.h"
        "love/src/libraries/glslang/glslang/ResourceLimits/ResourceLimits.cpp"
        # "love/src/libraries/glslang/SPIRV/bitutils.h"
        # "love/src/libraries/glslang/SPIRV/disassemble.cpp"
        # "love/src/libraries/glslang/SPIRV/disassemble.h"
        # "love/src/libraries/glslang/SPIRV/doc.cpp"
        # "love/src/libraries/glslang/SPIRV/doc.h"
        # "love/src/libraries/glslang/SPIRV/GLSL.ext.AMD.h"
        # "love/src/libraries/glslang/SPIRV/GLSL.ext.ARM.h"
        # "love/src/libraries/glslang/SPIRV/GLSL.ext.EXT.h"
        # "love/src/libraries/glslang/SPIRV/GLSL.ext.KHR.h"
        # "love/src/libraries/glslang/SPIRV/GLSL.ext.NV.h"
        # "love/src/libraries/glslang/SPIRV/GLSL.ext.QCOM.h"
        # "love/src/libraries/glslang/SPIRV/GLSL.std.450.h"
        # "love/src/libraries/glslang/SPIRV/GlslangToSpv.cpp"
        # "love/src/libraries/glslang/SPIRV/GlslangToSpv.h"
        # "love/src/libraries/glslang/SPIRV/hex_float.h"
        # "love/src/libraries/glslang/SPIRV/InReadableOrder.cpp"
        # "love/src/libraries/glslang/SPIRV/Logger.cpp"
        # "love/src/libraries/glslang/SPIRV/Logger.h"
        # "love/src/libraries/glslang/SPIRV/NonSemanticDebugPrintf.h"
        # "love/src/libraries/glslang/SPIRV/NonSemanticShaderDebugInfo100.h"
        # "love/src/libraries/glslang/SPIRV/spirv.hpp"
        # "love/src/libraries/glslang/SPIRV/SpvBuilder.cpp"
        # "love/src/libraries/glslang/SPIRV/SpvBuilder.h"
        # "love/src/libraries/glslang/SPIRV/spvIR.h"
        # "love/src/libraries/glslang/SPIRV/SpvPostProcess.cpp"
        # "love/src/libraries/glslang/SPIRV/SPVRemapper.cpp"
        # "love/src/libraries/glslang/SPIRV/SPVRemapper.h"
        # "love/src/libraries/glslang/SPIRV/SpvTools.cpp"
        # "love/src/libraries/glslang/SPIRV/SpvTools.h"

        "love/src/libraries/noise1234/noise1234.cpp"
        "love/src/libraries/noise1234/noise1234.h"
        "love/src/libraries/noise1234/simplexnoise1234.cpp"
        "love/src/libraries/noise1234/simplexnoise1234.h"

        "love/src/modules/audio/Audio.cpp"

        "love/src/modules/data/DataModule.cpp"
        "love/src/modules/data/HashFunction.cpp"


        # add_library(love_filesystem_root STATIC
        "love/src/modules/filesystem/File.cpp"
        "love/src/modules/filesystem/File.h"
        "love/src/modules/filesystem/FileData.cpp"
        "love/src/modules/filesystem/FileData.h"
        # "love/src/modules/filesystem/Filesystem.cpp"
        # "love/src/modules/filesystem/Filesystem.h"
        "love/src/modules/filesystem/NativeFile.cpp"
        "love/src/modules/filesystem/NativeFile.h"
        "love/src/modules/filesystem/wrap_File.cpp"
        "love/src/modules/filesystem/wrap_File.h"
        "love/src/modules/filesystem/wrap_FileData.cpp"
        "love/src/modules/filesystem/wrap_FileData.h"
        # "love/src/modules/filesystem/wrap_Filesystem.cpp"
        # "love/src/modules/filesystem/wrap_Filesystem.h"
        "love/src/modules/filesystem/wrap_NativeFile.cpp"
        "love/src/modules/filesystem/wrap_NativeFile.h"

        # add_library(love_font_root STATIC
        "love/src/modules/font/BMFontRasterizer.cpp"
        "love/src/modules/font/BMFontRasterizer.h"
        "love/src/modules/font/Font.cpp"
        "love/src/modules/font/Font.h"
        "love/src/modules/font/GenericShaper.cpp"
        "love/src/modules/font/GenericShaper.h"
        "love/src/modules/font/GlyphData.cpp"
        "love/src/modules/font/GlyphData.h"
        "love/src/modules/font/ImageRasterizer.cpp"
        "love/src/modules/font/ImageRasterizer.h"
        "love/src/modules/font/Rasterizer.cpp"
        "love/src/modules/font/Rasterizer.h"
        "love/src/modules/font/TextShaper.cpp"
        "love/src/modules/font/TextShaper.h"
        "love/src/modules/font/TrueTypeRasterizer.cpp"
        "love/src/modules/font/TrueTypeRasterizer.h"
        "love/src/modules/font/wrap_Font.cpp"
        "love/src/modules/font/wrap_Font.h"
        "love/src/modules/font/wrap_GlyphData.cpp"
        "love/src/modules/font/wrap_GlyphData.h"
        "love/src/modules/font/wrap_Rasterizer.cpp"
        "love/src/modules/font/wrap_Rasterizer.h"



        # add_library(love_graphics_root STATIC
        "love/src/modules/graphics/Buffer.cpp"
        "love/src/modules/graphics/Buffer.h"
        "love/src/modules/graphics/Deprecations.cpp"
        "love/src/modules/graphics/Deprecations.h"
        "love/src/modules/graphics/Drawable.cpp"
        "love/src/modules/graphics/Drawable.h"
        "love/src/modules/graphics/Font.cpp"
        "love/src/modules/graphics/Font.h"
        "love/src/modules/graphics/Graphics.cpp"
        "love/src/modules/graphics/Graphics.h"
        "love/src/modules/graphics/GraphicsReadback.cpp"
        "love/src/modules/graphics/GraphicsReadback.h"
        "love/src/modules/graphics/Mesh.cpp"
        "love/src/modules/graphics/Mesh.h"
        "love/src/modules/graphics/ParticleSystem.cpp"
        "love/src/modules/graphics/ParticleSystem.h"
        "love/src/modules/graphics/Polyline.cpp"
        "love/src/modules/graphics/Polyline.h"
        "love/src/modules/graphics/Quad.cpp"
        "love/src/modules/graphics/Quad.h"
        "love/src/modules/graphics/renderstate.cpp"
        "love/src/modules/graphics/renderstate.h"
        "love/src/modules/graphics/Resource.h"
        "love/src/modules/graphics/Shader.cpp"
        "love/src/modules/graphics/Shader.h"
        "love/src/modules/graphics/ShaderStage.cpp"
        "love/src/modules/graphics/ShaderStage.h"
        "love/src/modules/graphics/SpriteBatch.cpp"
        "love/src/modules/graphics/SpriteBatch.h"
        "love/src/modules/graphics/StreamBuffer.cpp"
        "love/src/modules/graphics/StreamBuffer.h"
        "love/src/modules/graphics/TextBatch.cpp"
        "love/src/modules/graphics/TextBatch.h"
        "love/src/modules/graphics/Texture.cpp"
        "love/src/modules/graphics/Texture.h"
        "love/src/modules/graphics/vertex.cpp"
        "love/src/modules/graphics/vertex.h"
        "love/src/modules/graphics/Video.cpp"
        "love/src/modules/graphics/Video.h"
        "love/src/modules/graphics/Volatile.cpp"
        "love/src/modules/graphics/Volatile.h"
        "love/src/modules/graphics/wrap_Buffer.cpp"
        "love/src/modules/graphics/wrap_Buffer.h"
        "love/src/modules/graphics/wrap_Font.cpp"
        "love/src/modules/graphics/wrap_Font.h"
        "love/src/modules/graphics/wrap_Graphics.cpp"
        "love/src/modules/graphics/wrap_Graphics.h"
        "love/src/modules/graphics/wrap_Graphics.lua"
        "love/src/modules/graphics/wrap_GraphicsReadback.cpp"
        "love/src/modules/graphics/wrap_GraphicsReadback.h"
        "love/src/modules/graphics/wrap_Mesh.cpp"
        "love/src/modules/graphics/wrap_Mesh.h"
        "love/src/modules/graphics/wrap_ParticleSystem.cpp"
        "love/src/modules/graphics/wrap_ParticleSystem.h"
        "love/src/modules/graphics/wrap_Quad.cpp"
        "love/src/modules/graphics/wrap_Quad.h"
        "love/src/modules/graphics/wrap_Shader.cpp"
        "love/src/modules/graphics/wrap_Shader.h"
        "love/src/modules/graphics/wrap_SpriteBatch.cpp"
        "love/src/modules/graphics/wrap_SpriteBatch.h"
        "love/src/modules/graphics/wrap_Texture.cpp"
        "love/src/modules/graphics/wrap_Texture.h"
        "love/src/modules/graphics/wrap_TextBatch.cpp"
        "love/src/modules/graphics/wrap_TextBatch.h"
        "love/src/modules/graphics/wrap_Video.cpp"
        "love/src/modules/graphics/wrap_Video.h"
        "love/src/modules/graphics/wrap_Video.lua"

        "love/src/modules/graphics/wrap_Font.cpp"
        "love/src/modules/graphics/wrap_Graphics.cpp"

        "love/src/modules/image/CompressedImageData.cpp"

        # add_library(love_joystick_root STATIC
        "love/src/modules/joystick/Joystick.cpp"
        "love/src/modules/joystick/Joystick.h"
        "love/src/modules/joystick/JoystickModule.h"
        "love/src/modules/joystick/wrap_Joystick.cpp"
        "love/src/modules/joystick/wrap_Joystick.h"
        "love/src/modules/joystick/wrap_JoystickModule.cpp"
        "love/src/modules/joystick/wrap_JoystickModule.h"

        "love/src/modules/love/love.cpp"

        # add_library(love_math STATIC
        "love/src/modules/math/BezierCurve.cpp"
        "love/src/modules/math/BezierCurve.h"
        "love/src/modules/math/MathModule.cpp"
        "love/src/modules/math/MathModule.h"
        "love/src/modules/math/RandomGenerator.cpp"
        "love/src/modules/math/RandomGenerator.h"
        "love/src/modules/math/Transform.cpp"
        "love/src/modules/math/Transform.h"
        "love/src/modules/math/wrap_BezierCurve.cpp"
        "love/src/modules/math/wrap_BezierCurve.h"
        "love/src/modules/math/wrap_Math.cpp"
        "love/src/modules/math/wrap_Math.h"
        "love/src/modules/math/wrap_Math.lua"
        "love/src/modules/math/wrap_RandomGenerator.cpp"
        "love/src/modules/math/wrap_RandomGenerator.h"
        "love/src/modules/math/wrap_RandomGenerator.lua"
        "love/src/modules/math/wrap_Transform.cpp"
        "love/src/modules/math/wrap_Transform.h"

        # add_library(love_sensor_root STATIC
        "love/src/modules/sensor/Sensor.cpp"
        "love/src/modules/sensor/Sensor.h"
        "love/src/modules/sensor/wrap_Sensor.cpp"
        "love/src/modules/sensor/wrap_Sensor.h"

        "love/src/modules/system/System.cpp"

        # add_library(love_thread_root STATIC
        "love/src/modules/thread/Channel.cpp"
        "love/src/modules/thread/Channel.h"
        "love/src/modules/thread/LuaThread.cpp"
        "love/src/modules/thread/LuaThread.h"
        "love/src/modules/thread/Thread.h"
        "love/src/modules/thread/ThreadModule.cpp"
        "love/src/modules/thread/ThreadModule.h"
        "love/src/modules/thread/threads.cpp"
        "love/src/modules/thread/threads.h"
        "love/src/modules/thread/wrap_Channel.cpp"
        "love/src/modules/thread/wrap_Channel.h"
        "love/src/modules/thread/wrap_LuaThread.cpp"
        "love/src/modules/thread/wrap_LuaThread.h"
        "love/src/modules/thread/wrap_ThreadModule.cpp"
        "love/src/modules/thread/wrap_ThreadModule.h"

        # add_library(love_thread_sdl STATIC
        "love/src/modules/thread/sdl/Thread.cpp"
        "love/src/modules/thread/sdl/Thread.h"
        "love/src/modules/thread/sdl/threads.cpp"
        "love/src/modules/thread/sdl/threads.h"

        # add_library(love_video_root STATIC
        "love/src/modules/video/Video.h"
        "love/src/modules/video/VideoStream.cpp"
        "love/src/modules/video/VideoStream.h"
        "love/src/modules/video/wrap_Video.cpp"
        "love/src/modules/video/wrap_Video.h"
        "love/src/modules/video/wrap_VideoStream.cpp"
        "love/src/modules/video/wrap_VideoStream.h"

        "love/src/modules/window/Window.cpp"
    INCLUDE_DIRS
        "love/src"
        "love/src/modules"

    REQUIRES
        georgik__lua
        georgik__ogg
        georgik__theora
        georgik__sdl
)

#add_compile_definitions(LUA_32BITS)

target_compile_options(${COMPONENT_LIB} PRIVATE
    -fexceptions
    # -fpermissive # SDL dynamic load - probably could be removed
)
